# geo-processor

./: README.md  makefile
api-nestjs/: makefile  package-lock.json  package.json
api-nestjs/src/: app.controller.spec.ts  app.controller.ts  app.service.ts  main.ts
api-python/: makefile  pyproject.toml
api-python/src/api_python/: main.py
api-python/src/api_python/routes/: points.py
api-python/src/api_python/schemas/: errors.py  points.py
api-python/test/: test_points.py
front/: makefile  package-lock.json  package.json
front/app/: page.tsx
front/app/components/: input_points.tsx  map.tsx  results.tsx
front/app/models/: points.tsx
