[project]
name = "api-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raul Casanova", email = "raul.casanova.03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
]

[project.scripts]
api-python = "api-python:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
